fix(chat/youtube): youtube video should be ok on mobile

--- a/src/pages/Chat/components/ChatMessage/ChatMessage.css
+++ b/src/pages/Chat/components/ChatMessage/ChatMessage.css
@@ -79,3 +79,18 @@
   object-fit: cover;
   object-position: 50% 0;
 }
+
+.youtube-container {
+  position: relative;
+  height: 0;
+  padding-top: 25px;
+  padding-bottom: 56.25% /* 16:9 */;
+}
+
+.youtube {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
